repositories type changed

--- a/PhotoBook/PhotoBook.csproj
+++ b/PhotoBook/PhotoBook.csproj
@@ -187,6 +187,7 @@
     <Compile Include="DAL\Repository.cs" />
     <Compile Include="DAL\TagRepository.cs" />
     <Compile Include="DAL\UnitOfWork.cs" />
+    <Compile Include="DAL\UserRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -213,6 +214,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Services\Filter.cs" />
+    <Compile Include="Services\PhotoEditor.cs" />
     <Compile Include="Services\PhotoUploadService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -222,6 +224,7 @@
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -338,6 +341,7 @@
     <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
     <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
     <Content Include="Views\PhotoBook\Upload.cshtml" />
+    <Content Include="Views\PhotoBook\Photos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
