--- a/PhotoBook/Web.config
+++ b/PhotoBook/Web.config
@@ -78,8 +78,8 @@
       <!--Use this initializer if you want to use datbase migration-->
       <context type="PhotoBook.DAL.PhotoBookContext, PhotoBook" disableDatabaseInitialization="false">
         <databaseInitializer
-          type="System.Data.Entity.MigrateDatabaseToLatestVersion`2[[PhotoBook.DAL.PhotoBookContext, PhotoBook],
-             [PhotoBook.Migrations.Configuration,  PhotoBook]], EntityFramework" />
+          type="System.Data.Entity.MigrateDatabaseToLatestVersion`2[[PhotoBook.DAL.PhotoBookContext, PhotoBook],&#xD;&#xA;             [PhotoBook.Migrations.Configuration,  PhotoBook]], EntityFramework"
+                                                                                 />
       </context>
       <!--Use this initializer if you are testing and want to create a new database for each test.-->
       <!--<context disabledatabaseinitialization="false" type="PhotoBook.DAL.PhotoBookContext, PhotoBook">
@@ -100,6 +100,15 @@
     <PhotoBook.Properties.Settings>
       <setting name="UserUploads" serializeAs="String">
         <value>~\_uploads\</value>
+      </setting>
+      <setting name="PhotosPerPage" serializeAs="String">
+        <value>9</value>
+      </setting>
+      <setting name="ThumbnailHeight" serializeAs="String">
+        <value>136</value>
+      </setting>
+      <setting name="ThumbnailWidth" serializeAs="String">
+        <value>201</value>
       </setting>
     </PhotoBook.Properties.Settings>
   </applicationSettings>
