--- a/PhotoBook/Properties/Settings.settings
+++ b/PhotoBook/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="UserUploads" Type="System.String" Scope="Application">
       <Value Profile="(Default)">~\_uploads\</Value>
     </Setting>
+    <Setting Name="PhotosPerPage" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">9</Value>
+    </Setting>
+    <Setting Name="ThumbnailHeight" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">136</Value>
+    </Setting>
+    <Setting Name="ThumbnailWidth" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">201</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
