--- a/PhotoBook/Web.config
+++ b/PhotoBook/Web.config
@@ -24,6 +24,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="~/Shared/Error">
+      <error statusCode="404" redirect="/Error/Http404" />
+      <error statusCode="403" redirect="/Error/Http403" />
+    </customErrors>
     <!--<roleManager enabled="true" defaultProvider="simple">
       <providers>
         <clear/>
