some bugs fixed

--- a/PhotoBook/Web.config
+++ b/PhotoBook/Web.config
@@ -12,8 +12,6 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PhotoBook-20131029123352;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PhotoBook-20131029123352.mdf" providerName="System.Data.SqlClient" />-->
-  <!--<add name="PhotoBookContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=PhotoBook;Integrated Security=true;AttachDBFilename=|DataDirectory|\PhotoBook.mdf" providerName="System.Data.SqlClient" />-->
     <add name="PhotoBookContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=PhotoBook;Integrated Security=true;AttachDBFilename=|DataDirectory|\PhotoBook.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -24,10 +22,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <!--<customErrors mode="On" defaultRedirect="~/Shared/Error">
+    <customErrors mode="On" defaultRedirect="~/Shared/Error">
       <error statusCode="404" redirect="/Error/Http404" />
       <error statusCode="403" redirect="/Error/Http403" />
-    </customErrors>-->
+    </customErrors>
     <!--<roleManager enabled="true" defaultProvider="simple">
       <providers>
         <clear/>
