--- a/PhotoBook/PhotoBook.csproj
+++ b/PhotoBook/PhotoBook.csproj
@@ -356,6 +356,8 @@
     <Content Include="Views\PhotoBook\UserAlbum.cshtml" />
     <Content Include="Views\Shared\_TagCloud.cshtml" />
     <Content Include="Views\Shared\_PopularPhotos.cshtml" />
+    <Content Include="Views\Shared\_DeleteSuccessful.cshtml" />
+    <Content Include="Views\Shared\_DeleteUnsuccessful.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
