--- a/PhotoBook/Web.config
+++ b/PhotoBook/Web.config
@@ -110,6 +110,9 @@
       <setting name="ThumbnailWidth" serializeAs="String">
         <value>201</value>
       </setting>
+      <setting name="NoCover" serializeAs="String">
+        <value>no_image.gif</value>
+      </setting>
     </PhotoBook.Properties.Settings>
   </applicationSettings>
 </configuration>
