--- a/PhotoBook/packages.config
+++ b/PhotoBook/packages.config
@@ -32,6 +32,7 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="postal" version="0.8.2" targetFramework="net45" />
   <package id="RazorEngine" version="3.2.0" targetFramework="net45" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
