--- a/PhotoBook/PhotoBook.csproj
+++ b/PhotoBook/PhotoBook.csproj
@@ -179,15 +179,21 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\PhotoApiController.cs" />
     <Compile Include="Controllers\PhotoBookController.cs" />
     <Compile Include="Controllers\PhotoController.cs" />
+    <Compile Include="Controllers\TagApiController.cs" />
     <Compile Include="Controllers\TagController.cs" />
+    <Compile Include="Controllers\UserApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\BootStrapper.cs" />
     <Compile Include="Infrastructure\PhotoBookControllerFactory.cs" />
+    <Compile Include="Infrastructure\StructureMapDependencyResolver.cs" />
+    <Compile Include="Infrastructure\StructureMapScope.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AlbumViewModel.cs" />
     <Compile Include="Models\EditModel.cs" />
@@ -364,6 +370,9 @@
     <Content Include="Views\Shared\_DeleteSuccessful.cshtml" />
     <Content Include="Views\Shared\_DeleteUnsuccessful.cshtml" />
     <Content Include="Views\Shared\_PhotoList.cshtml" />
+    <Content Include="Views\Admin\Users.cshtml" />
+    <Content Include="Views\Admin\Photos.cshtml" />
+    <Content Include="Views\Admin\Tags.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
