--- a/PhotoBook/Web.config
+++ b/PhotoBook/Web.config
@@ -22,7 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Shared/Error">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Shared/Error">
       <error statusCode="404" redirect="/Error/Http404" />
       <error statusCode="403" redirect="/Error/Http403" />
     </customErrors>
