--- a/PhotoBook/PhotoBook.csproj
+++ b/PhotoBook/PhotoBook.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\PhotoApiController.cs" />
     <Compile Include="Controllers\PhotoBookController.cs" />
     <Compile Include="Controllers\PhotoController.cs" />
+    <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\TagApiController.cs" />
     <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Controllers\UserApiController.cs" />
