--- a/PhotoBook/PhotoBook.csproj
+++ b/PhotoBook/PhotoBook.csproj
@@ -301,6 +301,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\coffee-script.js" />
+    <Content Include="Scripts\dropdown.js" />
     <Content Include="Scripts\gallery\ajax-loader_dark.gif" />
     <Content Include="Scripts\gallery\empty.gif" />
     <Content Include="Scripts\gallery\fs_img_g_bg.png" />
@@ -374,6 +375,7 @@
     <Content Include="Views\Admin\Users.cshtml" />
     <Content Include="Views\Admin\Photos.cshtml" />
     <Content Include="Views\Admin\Tags.cshtml" />
+    <Content Include="Views\Admin\EditTag.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
